log
Wed 20 Mar 2024 05:13:04 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
4f08a3f
Wed 20 Mar 2024 05:21:39 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:37: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, sizeof(List));
      |                                     ^~~~
Compilation failed
400ecef
Wed 20 Mar 2024 05:21:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af4d4d4
Wed 20 Mar 2024 05:22:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:37: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, sizeof(List));
      |                                     ^~~~
Compilation failed
20653d7
Wed 20 Mar 2024 05:24:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, i * sizeof(List));
      |                                         ^~~~
Compilation failed
9831dc7
Wed 20 Mar 2024 05:24:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘struct List’
   47 |      L = (List *) realloc(L, i * sizeof(struct List));
      |                                         ^~~~~~
Compilation failed
96c16da
Wed 20 Mar 2024 05:25:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:41: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |      L = (List *) realloc(L, i * sizeof(List));
      |                                         ^~~~
Compilation failed
e418a58
Wed 20 Mar 2024 05:27:05 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
36e706a
